--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,22 @@
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-context-support</artifactId>
 		</dependency>
+		
+		<dependency> 
+            <groupId>io.jsonwebtoken</groupId> 
+            <artifactId>jjwt-api</artifactId> 
+            <version>0.11.5</version> 
+        </dependency> 
+        <dependency> 
+            <groupId>io.jsonwebtoken</groupId> 
+            <artifactId>jjwt-impl</artifactId> 
+            <version>0.11.5</version> 
+        </dependency>
+        <dependency> 
+            <groupId>io.jsonwebtoken</groupId> 
+            <artifactId>jjwt-jackson</artifactId> 
+            <version>0.11.5</version> 
+        </dependency> 
 	</dependencies>
 
 	<build>
